Add a second folder to verify!

--- a/fileList.ini
+++ b/fileList.ini
@@ -1,5 +1,6 @@
-ftpserver=192.168.0.103
-user=loja
-password=loja
+ftpserver=lojasamerica.com.br
+user=vagner
+password=p5q3
 loja=5
-xmlFolder=C:\NFCE\BACKUP\
+backupFolder=C:\NFCE\BACKUP\
+custodiaFolder=C:\NFCE\CUSTODIA
