--- a/fileList.ini
+++ b/fileList.ini
@@ -1,6 +1,6 @@
-ftpserver=lojasamerica.com.br
+ftpserver=ftp.lojasamerica.com.br
 user=vagner
-password=p5q3
-loja=5
-backupFolder=C:\NFCE\BACKUP\
-custodiaFolder=C:\NFCE\CUSTODIA
+password=vagner
+loja=05
+backupFolder=C:\\NFCE\\BACKUP\\
+custodiaFolder=C:\\NFCE\\CUSTODIA\\
